<resources>
    <string name="app_name">OpenCFDIMovil</string>
    <string name="section_resumen">Resumen</string>
    <string name="section_datos_facturacion">Mis datos</string>
    <string name="section_articulos">Articulos</string>
    <string name="section_clientes">Clientes</string>
    <string name="section_cotizaciones">Cotizaciones</string>
    <string name="section_facturas">Facturas</string>
    <string name="account_preference">account</string>
    <string name="image_preference">profile</string>
    <string name="permission_preference">permission</string>
    <string name="rfc_preference">rfc</string>
    <string name="razon_preference">razon</string>
    <string name="certificado_preference">certificado</string>
    <string name="regimen_preference">regimen</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_concepto">Agregar concepto</string>
    <string name="x">X</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_comprar">COMPRAR FOLIOS</string>
    <string name="action_comprar_oxxo">SOLICITAR CODIGO DE PAGO</string>
    <string name="action_guardar">Guardar</string>
    <string name="action_agregar_factura">Agregar a la factura</string>
    <string name="action_nuevo_articulo">Nuevo articulo</string>
    <string name="action_nuevo_cotizacion">Nueva cotizacion</string>
    <string name="action_subir">Subir</string>
    <string name="action_actualizar">Actualizar folios</string>
    <string name="ayuda">Selecciona el error para pedir asistencia.</string>
    <string name="action_nuevo_cliente">Nuevo cliente</string>
    <string name="action_settings">Settings</string>
    <string name="guardado">Registro guardado.</string>
    <string name="agregado_lista">Agregado a la factura.</string>
    <string name="scope_constant">oauth2:https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile</string>
    <string name="eliminar">Eliminar</string>
    <string name="terminos">Terminos</string>
    <string name="politicas">Politicas</string>
    <string name="editar">Editar</string>
    <string name="agregar_regimen">AGREGAR REGIMEN</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="sign_in">Ingresar</string>
    <string name="enter">ENTRAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="certificado">Certificado</string>
    <string name="llave">Llave</string>
    <string name="generar_factura">Crear factura</string>
    <string name="inicia_session">INICIA SESION</string>
    <string name="generar_pdf">Crear cotizacion</string>
    <string name="comenzar">Comenzar</string>
    <string name="hastag">#CFDIMovil</string>
    <string name="actualizar">Actualizar</string>
    <string name="campo_vacio">Es necesario llenar el campo</string>
    <string name="factura_PDF">PDF</string>
    <string name="factura_XML">XML</string>
    <string name="factura_enviar">Enviar</string>
    <string name="hint_receptores">CLIENTES</string>
    <string name="hint_rfc">RFC</string>
    <string name="hint_razon">Razon social</string>
    <string name="hint_certificado">Certificado</string>
    <string name="hint_regimen">Regimen</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_calle">Calle</string>
    <string name="hint_noExterior">No exterior</string>
    <string name="hint_noInterior">No interior</string>
    <string name="hint_colonia">Colonia</string>
    <string name="hint_localidad">Localidad</string>
    <string name="hint_referencia">Referencia</string>
    <string name="hint_municipio">Municipio</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_pais">Pais</string>
    <string name="hint_codigoPostal">CP</string>
    <string name="hint_obligatorio">Campo obligatorio</string>
    <string name="hint_factura_asignados">Asignados</string>
    <string name="hint_factura_disponibles">Disponibles</string>
    <string name="hint_importe">Importe ($)</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_noIdentificacion">Identificacion</string>
    <string name="hint_valorUnitario">Valor unitario</string>
    <string name="hint_descripcion">Descripcion</string>
    <string name="hint_unidad">Unidad</string>
    <string name="hint_adicional">INFORMACION ADICIONAL:</string>
    <string name="hint_iva">IVA (%)</string>
    <string name="hint_ieps">IEPS (%)</string>
    <string name="hint_iva_retenido">IVA ($)</string>
    <string name="hint_isr">ISR ($)</string>
    <string name="hint_retenidos">Retenidos</string>
    <string name="hint_trasladados">Trasladados</string>
    <string name="hint_impuestos_retenidos">IMPUESTOS RETENIDOS:</string>
    <string name="hint_impuestos_trasladados">IMPUESTOS TRASLADADOS:</string>
    <string name="hint_formaDePago">Forma de pago</string>
    <string name="default_formaDePago">PAGO EN UNA SOLA EXHIBICION</string>
    <string name="hint_tipoDeComprobante">Tipo de comprobante</string>
    <string name="hint_metodoDePago">Metodo de pago</string>
    <string name="hint_metodoDePagoValues">Cheque, tarjeta de crédito o debito, depósito en cuenta</string>
    <string name="hint_lugarExpedicion">Lugar de expedicion</string>
    <string name="leyend_numCtaPago">Numero de cuenta</string>
    <string name="hint_numCtaPago">4 digitos de tu cuenta.</string>
    <string name="hint_moneda">Moneda</string>
    <string name="hint_tipoCambio">Tipo de cambio</string>
    <string name="hint_informacionAduanera">Informacion aduanera</string>
    <string name="hint_cuentaPredial">Cuenta predial</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_parte">Parte</string>
    <string name="error_noIdentificacion">Ingresa un Numero de identificacion para el articulo.</string>
    <string name="error_descripcion">Ingresa una descripcion para tu articulo.</string>
    <string name="error_valorUnitario">Ingresa un valor unitario para tu articulo.</string>
    <string name="error_importe">Importe invalido.</string>
    <string name="conceptos">Conceptos</string>
    <string name="cambiar_profile">La imagen que selecciones aparecera en tus facturas y cotizaciones, si no seleccionas ninguna aparecera tu nombre solamente.</string>
    <string name="subtotal">Subtotal:</string>
    <string name="seleccionar_certificados">Seleccionar archivos</string>
    <string name="cerrar">Cerrar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="escoger">Escoger imagen</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelar_factura">Cancelar factura</string>
    <string name="help">Ayuda</string>
    <string name="enviar">Enviar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="error_cuenta">Es necesario que te inicies session antes.</string>
    <string name="error_desconocido">Error desconocido intenta de nuevo</string>
    <string name="error_password">Contraseña requerida para empezar el proceso de facturacion.</string>
    <string name="error_rfc">Ingresa un RFC valido.</string>
    <string name="error_formato">La llamada no esta en el formato adecuado.</string>
    <string name="error_timeout">Por el momento el servicio no esta disponible, por favor, intenta mas tarde.</string>
    <string name="error_conexion">Internet intermitente, intenta de nuevo.</string>
    <string name="error_facturando">Por el momento no es posible generar tu factura.</string>
    <string name="error_cargo">Por el momento no es posible generar el cargo a tu tarjeta.</string>
    <string name="error_app_identidad">Lo sentimos el token no es valido para utilizar el servicio.</string>
    <string name="error_email_identidad">Lo sentimos el email que intentas registrar no coincide con el RFC.</string>
    <string name="error_email">Por el momento solo aceptamos el registro con cuenta manejadas por Google, por favor selecciona un correo valido.</string>
    <string name="error_campos">Por favor ingresa informacion en los campos RFC y Razon Social.</string>
    <string name="error_regimen">Por favor ingresa tu regimen.</string>
    <string name="error_documentos">Aun no tenemos tus certificados, por favor selecciona los archivos en tu Google Drive.</string>
    <string name="email_message">Aun no tenemos tus certificados, hemos enviado un correo electronico para que los subas con el PAC Ecodex..\n\nUna vez que tengas tus certificados en el sistema pulsa "Facturar".</string>
    <string name="email_nuevo">Es necesario ingresar un numero de certificado valido.\n\n¿Deseeas recibir otro email para subir tus certificados?</string>
    <string name="verficando_identidad">Verificando identidad</string>
    <string name="registrando">Estamos procesando tu solicitud por favor espera…</string>
    <string name="actualizando">Estamos obteniendo tus folios por favor espera…</string>
    <string name="facturando">Estamos procesando tu factura por favor espera…</string>
    <string name="procesado_facturas">Estamos procesando tus facturas por favor espera…</string>
    <string name="procesado_cotizaciones">Estamos procesando tus cotizaciones por favor espera…</string>
    <string name="procesado_cotizacion">Estamos procesando tu cotizacion por favor espera…</string>
    <string name="procesado_factura">Estamos procesando tu factura por favor espera…</string>
    <string name="title_activity_main_activity2">MainActivity</string>
    <string name="eliminar_receptor">¿En verdad deceas eliminar este receptor?</string>
    <string name="eliminar_concepto">¿En verdad deceas eliminar este articulo?</string>
    <string name="permiso_facturar">Facturar</string>
    <string name="vence">Ingresa la fecha de vencimiento de la cotizacion:</string>
    <string name="factura_success">Factura generada y guardada revisa tu SD :</string>
    <string name="actualizacion_folios_success">Tus folios han sido actualizados.</string>
    <string name="password">Ingresa el password de tus certificados</string>
    <string name="success">Credenciales obtenidas con exito.</string>
    <string-array name="iva_array">
        <item>0</item>
        <item>16</item>
    </string-array>
    <string-array name="secciones_array">
        <item>@string/section_resumen</item>
        <item>@string/section_datos_facturacion</item>
        <item>@string/section_articulos</item>
        <item>@string/section_clientes</item>
        <item>@string/section_cotizaciones</item>
        <item>@string/section_facturas</item>
    </string-array>
    <string-array name="regimen_array">
        <item>GENERAL</item>
        <item>PEQUEÑO CONTRIBUYENTE CON ACTIVIDAD EMPRESARIAL</item>
    </string-array>
    <string-array name="adicional_array">
        <item>NINGUNO</item>
        <item>INFORMACION ADUANERA</item>
        <item>CUENTA PREDIAL</item>
        <item>COMPLEMENTO</item>
        <item>PARTE</item>
    </string-array>
    <string-array name="tipoDeComprobante_array">
        <item>ingreso</item>
        <item>egreso</item>
        <item>traslado</item>
    </string-array>
    <string-array name="metodoDePago_array">
        <item>NO APLICA</item>
        <item>EFECTIVO</item>
        <item>CHEQUE</item>
        <item>TARJETA DE CREDITO</item>
        <item>TARJETA DE DEBITO</item>
        <item>DEPOSITO EN CUENTA</item>
    </string-array>
    <string-array name="formaDePago_array">
        <item>NO APLICA</item>
        <item>PAGO EN UNA SOLA EXHIBICION</item>
    </string-array>
</resources>