<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.cfdimovil.app.utils.FloatLabelLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:floatLabelTextAppearance="@style/HintUp">
            <EditText
                android:id="@+id/rfc"
                style="@style/Field"
                android:hint="@string/hint_rfc"
                android:nextFocusDown="@+id/regimenFiscal.regimen"/>
        </com.cfdimovil.app.utils.FloatLabelLayout>

        <com.cfdimovil.app.utils.FloatLabelLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            app:floatLabelTextAppearance="@style/HintUp">
            <EditText
                android:id="@+id/nombre"
                style="@style/FieldMultiline"
                android:hint="@string/hint_razon"
                android:nextFocusDown="@+id/domicilio.calle"/>
        </com.cfdimovil.app.utils.FloatLabelLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <Button
                android:id="@+id/agregarRegimen"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                android:text="@string/agregar_regimen"
                style="@style/boton_aceptar"
                android:textSize="12sp"/>

        </LinearLayout>

        <com.cfdimovil.app.utils.FloatLabelLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            app:floatLabelTextAppearance="@style/HintUp">
            <EditText
                android:id="@+id/domicilio.calle"
                style="@style/Field"
                android:hint="@string/hint_calle"
                android:nextFocusDown="@+id/domicilio.noExterior"/>
        </com.cfdimovil.app.utils.FloatLabelLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.noExterior"
                    style="@style/Field"
                    android:hint="@string/hint_noExterior"
                    android:nextFocusDown="@+id/domicilio.noInterior"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.noInterior"
                    style="@style/Field"
                    android:hint="@string/hint_noInterior"
                    android:nextFocusDown="@+id/domicilio.codigoPostal"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.codigoPostal"
                    style="@style/Field"
                    android:hint="@string/hint_codigoPostal"
                    android:nextFocusDown="@+id/domicilio.colonia"
                    android:inputType="number"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
        </LinearLayout>

        <com.cfdimovil.app.utils.FloatLabelLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            app:floatLabelTextAppearance="@style/HintUp">
            <EditText
                android:id="@+id/domicilio.colonia"
                style="@style/FieldMultiline"
                android:hint="@string/hint_colonia"
                android:nextFocusDown="@+id/domicilio.localidad"/>
        </com.cfdimovil.app.utils.FloatLabelLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.localidad"
                    style="@style/Field"
                    android:hint="@string/hint_localidad"
                    android:nextFocusDown="@+id/domicilio.municipio"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.municipio"
                    style="@style/Field"
                    android:hint="@string/hint_municipio"
                    android:nextFocusDown="@+id/domicilio.referencia"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
        </LinearLayout>

        <com.cfdimovil.app.utils.FloatLabelLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            app:floatLabelTextAppearance="@style/HintUp">
            <EditText
                android:id="@+id/domicilio.referencia"
                style="@style/FieldMultiline"
                android:hint="@string/hint_referencia"
                android:nextFocusDown="@+id/domicilio.estado"/>
        </com.cfdimovil.app.utils.FloatLabelLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <AutoCompleteTextView
                    android:id="@+id/domicilio.estado"
                    style="@style/Field"
                    android:hint="@string/hint_estado"
                    android:nextFocusDown="@+id/domicilio.pais"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
            <com.cfdimovil.app.utils.FloatLabelLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                app:floatLabelTextAppearance="@style/HintUp">
                <EditText
                    android:id="@+id/domicilio.pais"
                    style="@style/Field"
                    android:hint="@string/hint_pais"/>
            </com.cfdimovil.app.utils.FloatLabelLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>