<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_card_inactive">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="13sp"
                android:text="@string/hint_impuestos_trasladados"
                android:fontFamily="sans-serif"
                android:gravity="left"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        style="@style/HintUp"
                        android:text="@string/hint_iva"/>

                    <Spinner
                        android:id="@+id/iva.trasladado"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/blue"
                        android:popupBackground="@color/white"
                        android:nextFocusDown="@+id/ieps"/>

                </LinearLayout>

                <com.cfdimovil.app.utils.FloatLabelLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="fill_parent"
                    app:floatLabelTextAppearance="@style/HintUp">
                    <EditText
                        android:id="@+id/ieps"
                        style="@style/Field"
                        android:hint="@string/hint_ieps"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/iva.retenido"/>
                </com.cfdimovil.app.utils.FloatLabelLayout>


            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="13sp"
                android:text="@string/hint_impuestos_retenidos"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:baselineAligned="false">

                <com.cfdimovil.app.utils.FloatLabelLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="fill_parent"
                    app:floatLabelTextAppearance="@style/HintUp">
                    <EditText
                        android:id="@+id/iva.retenido"
                        style="@style/Field"
                        android:hint="@string/hint_iva_retenido"
                        android:nextFocusDown="@+id/isr"
                        android:inputType="numberDecimal"/>
                </com.cfdimovil.app.utils.FloatLabelLayout>

                <com.cfdimovil.app.utils.FloatLabelLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="fill_parent"
                    app:floatLabelTextAppearance="@style/HintUp">
                    <EditText
                        android:id="@+id/isr"
                        style="@style/Field"
                        android:hint="@string/hint_isr"
                        android:nextFocusDown="@+id/guardar"
                        android:inputType="numberDecimal"/>
                </com.cfdimovil.app.utils.FloatLabelLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/guardar"
                style="@style/boton_aceptar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_guardar"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>